@@ -1,5 +1,9 @@
 @c -*-texinfo-*-
 
+@c Copyright (C) 2003, 2004, 2005, 2006, 2007, 2008, 2009,
+@c   2010 Free Software Foundation, Inc.
+@c See file doclicense.texi for copying conditions.
+
 @include trampver.texi
 
 @c The installation chapter.
@@ -66,7 +70,6 @@ texinfo-format-buffer @key{RET}} to generate
 @menu
 * Installation parameters::     Parameters in order to control installation.
 * Load paths::                  How to plug-in @value{tramp} into your environment.
-* Japanese manual::             Japanese manual.
 @end menu
 
 @node Installation parameters
@@ -111,7 +114,7 @@ You can even pass the @value{emacsname} or @value{emacsothername}
 command to be called:
 
 @example
-./configure --with-@value{emacsotherdir}=@value{emacsotherdir}21
+./configure --with-@value{emacsotherdir}=@value{emacsotherdir}22
 @end example
 
 If you specify the absolute path of the command, it must not contain
@@ -213,28 +216,3 @@ If the environment variable @env{INFOPATH} is set, add the directory
 (add-to-list 'Info-directory-list "~/@value{emacsdir}/tramp/info/")
 @end lisp
 @end ifset
-
-@node Japanese manual
-@section Japanese manual.
-@cindex installation
-
-Thanks to Yoichi Nakayama @email{yoichi@@geiin.org}, there exists a
-japanese translation of the @value{tramp} manual.  You can generate it
-applying the @option{--with-japanese-manual} option:
-
-@example
-./configure --with-japanese-manual
-@end example
-
-This will result in an Info manual
-@iftex
-@file{tramp_ja}.
-@end iftex
-@ifnottex
-@ifset jamanual
-@inforef{Top,,tramp_ja}.
-@end ifset
-@ifclear jamanual
-@file{tramp_ja}.
-@end ifclear
-@end ifnottex
