@@ -1,3 +1,12 @@
+2010-09-02  Michael Albinus  <michael.albinus@gmx.de>
+
+	* Makefile.in: Remove japanese manual creation.
+
+	* tramp.texi:
+	* trampinst.texi: Remove Japanese manual.
+
+	* trampver.texi.in: Remove japanesemanual.
+
 2010-08-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	Version 2.1.19 released.
